# Anomaly-Detection

./: folder_struct_idea  mlflow.db  notes.txt  pipeline.pkl  pyproject.toml  requirements.txt
config/: config.yaml
config/model_type/: ae.yaml  isoforest.yaml
config/models/: ae.yaml  isoforest.yaml
config/prep/: ae.yaml  isoforest.yaml
config/preprocessing/: preprocessing.yaml
config/training/: ae.yaml
config/tuning/: ae.yaml  isoforest.yaml
multirun/2026-04-17/20-17-01/: multirun.yaml
multirun/2026-04-17/20-23-39/: multirun.yaml
multirun/2026-04-17/20-24-20/: multirun.yaml
multirun/2026-04-17/20-24-42/: multirun.yaml
multirun/2026-04-21/18-42-22/: multirun.yaml
multirun/2026-04-21/18-44-43/: multirun.yaml
multirun/2026-04-22/20-46-46/: multirun.yaml
multirun/2026-04-22/20-51-45/: multirun.yaml
multirun/2026-04-22/20-55-47/: multirun.yaml
multirun/2026-04-22/21-17-24/: multirun.yaml
multirun/2026-04-24/19-27-18/: multirun.yaml
multirun/2026-04-24/19-55-29/: multirun.yaml
multirun/2026-04-24/19-57-58/: multirun.yaml
multirun/2026-04-24/19-59-00/: multirun.yaml
multirun/2026-04-24/20-06-39/: multirun.yaml
multirun/2026-04-24/20-20-03/: multirun.yaml
notebooks/: C3_W1_Anomaly_Detection.ipynb  Untitled.ipynb
scripts/: main_test.py  new_main.py  new_main2.py  preprocessing.py  tun4.py  tuning.py  tuning_test.py  tuning_testv3.py
src/anomaly_detection/: initial.py  initial_training.py  together.py  tuning.py  umlp
src/anomaly_detection/core/: builder.py  tuner.py  wrapper.py
src/anomaly_detection/data/: data.py  main.py
(+446 files in other folders)
